...
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="delete_confirmation_recording">Are you sure you want to delete the recording? All pinned sounds on the main screen will also be removed</string>
    <string name="create_sound">Create your sound</string>
    <string name="actions_text">You can watch an ad to play this sound or unlock all of them by purchasing PRO (Purchasing PRO will also remove the ads)</string>
    <string name="watch_an_ad">Watch an ad</string>
    <string name="about_fragment">About</string>
    <string name="pin_to_dashboard">Pin to main screen</string>
    <string name="edit_recording_name">Edit recording name</string>
    <string name="delete_recording">Delete recording</string>
    <string name="share_text">Hey. I found this really awesome app Relaxoo that helps you concentrate at day and makes it easy to fall asleep at night. Download it from here: https://play.google.com/store/apps/details?id=com.cazimir.relaxoo</string>
    <string name="delete_custom_sound">Delete sound</string>
    <string name="saved_combo">Saved combo</string>
    <string name="no_recording_text">Please enter a new name for your recording</string>
    <string name="no_combo_text">Please enter a name for your combo</string>
    <string name="no_internet">You are offline</string>
...
    <string name="sound_already_pinned">Sound already on main screen</string>
    <string name="recording_permission_denied">You need to grant recording permissions to record your own sounds</string>
    <string name="sound_saved">Sound saved</string>
    <string name="canceled">Nothing recorded</string>
    <string name="play_one_sound">You must play at least one sound</string>
    <string name="combo_hint">Enter your combo name here</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="buy_pro">Buy PRO</string>
    <string name="playing_except_pro">Playing all sounds except PRO</string>
    <string name="playing_except_loading">Some sounds are still loading. Playing already loaded sounds</string>
    <string name="custom_timer_zero">Please select an amount of time</string>
    <string name="playing_saved_combo">Playing selected combo</string>
...
    <string name="permission_storage_denied_title">Storage permission needed</string>
    <string name="permission_storage_denied_do_not_show_message">You need to go to Setting and enable the denied permissions there</string>
    <string name="permission_recording_denied">You need to grant recording permissions to record your own sound</string>
    <string name="permission_recording_denied_title">Recording permission needed</string>
    <string name="permission_recording_denied_do_not_show">You need to go to Setting and enable the permissions there</string>
    <string name="playing_random">Playing 3 random sounds</string>
    <string name="no_recordings_text">You don\'t have any recordings</string>
    <string name="no_favorites_text">You don\'t have any favorites</string>
    <string name="recording_duration">Duration: %s</string>
    <string name="recording_created">"Created at: %s"</string>
    <string name="set_timer_duration">Set timer duration</string>
    <string name="timer_custom_time">Custom</string>
    <string name="timer_dialog_minutes">%d minutes</string>
...
