<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_confirmation_dialog"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/delete_confirmation_text"
        android:text="@string/delete_confirmation"
        android:textSize="16sp" />

</LinearLayout>